[metadata]
name = leitmotiv
license = BSD 3-Clause license
version = attr:leitmotiv._version.LEITMOTIV_VERSION_STRING

[options]
include_package_data = True
package_dir =
    =src
packages = find:

[options.entry_points]
console_scripts =
    leitmotiv = leitmotiv.cli:main

[options.packages.find]
where = src
